[gd_scene load_steps=15 format=3 uid="uid://bggg174d0g1dl"]

[ext_resource type="Script" path="res://Game Components/Inventory/slot_gui.gd" id="1_s1lfe"]
[ext_resource type="Texture2D" uid="uid://bc8i1kp7icmg8" path="res://Game Components/UI_Elements/inv_components/selected_spell_frame.png" id="2_j78av"]
[ext_resource type="LabelSettings" uid="uid://rpr4y5q5ktko" path="res://char_info.tres" id="4_5223r"]
[ext_resource type="Material" uid="uid://clmgxynbvhxme" path="res://shaders/tutorial_pop_ups.tres" id="4_tio2r"]
[ext_resource type="FontFile" uid="uid://du58gfnyy5wpj" path="res://Game Components/fonts/Silver.ttf" id="5_dnc0k"]
[ext_resource type="Texture2D" uid="uid://b2hkcwwq10cut" path="res://icon.png" id="5_jl3ac"]
[ext_resource type="FontFile" uid="uid://bwuruoih52j0f" path="res://Game Components/fonts/Caroni-Regular.otf" id="7_n5lt4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c4bib"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_htl22"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cd28l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jkxse"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8mpnt"]

[sub_resource type="LabelSettings" id="LabelSettings_31war"]
line_spacing = -5.0
font = ExtResource("7_n5lt4")
font_size = 17
outline_color = Color(0, 0, 0, 1)
shadow_size = 0

[sub_resource type="LabelSettings" id="LabelSettings_x242d"]
line_spacing = -3.0
font = ExtResource("7_n5lt4")
font_size = 13
outline_color = Color(0, 0, 0, 1)
shadow_size = 0

[node name="Panel" type="Panel"]
self_modulate = Color(1, 1, 1, 0)
light_mask = 0
custom_minimum_size = Vector2(32, 32)
offset_right = 32.0
offset_bottom = 32.0
focus_mode = 2
script = ExtResource("1_s1lfe")

[node name="Control" type="Control" parent="."]
clip_contents = true
anchors_preset = 0
offset_top = 12.0
offset_right = 40.0
offset_bottom = 40.0

[node name="Sprite2D" type="Sprite2D" parent="Control"]
light_mask = 0
position = Vector2(0, -12)
texture = ExtResource("2_j78av")
centered = false

[node name="itemArt" type="Sprite2D" parent="."]
light_mask = 0
position = Vector2(16, 12)

[node name="indicator" type="Sprite2D" parent="."]
visible = false
light_mask = 0
texture = ExtResource("2_j78av")
centered = false

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 4.0
offset_right = 32.0
offset_bottom = 32.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_c4bib")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_htl22")
theme_override_styles/hover = SubResource("StyleBoxEmpty_cd28l")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_jkxse")
theme_override_styles/normal = SubResource("StyleBoxEmpty_8mpnt")

[node name="amount" type="Label" parent="."]
light_mask = 0
z_index = 1
texture_filter = 4
layout_mode = 0
offset_left = -20.0
offset_top = 16.0
offset_right = 28.0
offset_bottom = 42.0
text = "
asdfasdf"
label_settings = ExtResource("4_5223r")
horizontal_alignment = 2

[node name="Node2D" type="Node2D" parent="."]

[node name="tooltip" type="TextureRect" parent="."]
visible = false
z_index = 100
material = ExtResource("4_tio2r")
layout_mode = 0
offset_left = 36.0
offset_right = 136.0
offset_bottom = 112.0
texture = ExtResource("5_jl3ac")

[node name="hoverName" type="Label" parent="tooltip"]
light_mask = 0
z_index = 2
texture_filter = 4
layout_mode = 0
offset_top = 26.0
offset_right = 100.0
offset_bottom = 46.0
theme_override_fonts/font = ExtResource("5_dnc0k")
theme_override_font_sizes/font_size = 19
text = "Health Restore"
label_settings = SubResource("LabelSettings_31war")
horizontal_alignment = 1
autowrap_mode = 2

[node name="hoverDesc" type="Label" parent="tooltip"]
light_mask = 0
z_index = 2
texture_filter = 4
layout_mode = 0
offset_left = 12.0
offset_top = 48.0
offset_right = 88.0
offset_bottom = 101.0
theme_override_fonts/font = ExtResource("5_dnc0k")
theme_override_font_sizes/font_size = 19
text = "Restores 60hp"
label_settings = SubResource("LabelSettings_x242d")
horizontal_alignment = 1
autowrap_mode = 2

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
